// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Multiselect examples > Default multiselect should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="default-multiselect-input"
        id="default-multiselect-label"
      >
        Label (required)
      </label>
      <div
        class="v-surface v-input-container v-pl-3 v-pr-6 v-py-3"
      >
        <div
          class="v-flex v-flex-grow v-flex-shrink v-flex-wrap v-gap-2"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="default-multiselect-menu"
            aria-expanded="false"
            aria-labelledby="default-multiselect-label"
            autocomplete="off"
            class="v-input v-flex-shrink"
            id="default-multiselect-input"
            name="default-multiselect"
            role="combobox"
            style="flex-basis: 50px;"
            value=""
          />
        </div>
        <button
          aria-controls="default-multiselect-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="default-multiselect-toggle-button"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          id="default-multiselect-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="default-multiselect-label"
        class="v-listbox v-flex"
        id="default-multiselect-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="default-multiselect-item-0"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="default-multiselect-item-1"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="default-multiselect-item-2"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="default-multiselect-item-3"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="default-multiselect-item-4"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Multiselect examples > Disabled multiselect should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="disabled-multiselect-input"
        id="disabled-multiselect-label"
      >
        Label (required)
      </label>
      <div
        class="v-surface v-input-container v-pl-3 v-pr-6 v-py-3"
      >
        <div
          class="v-flex v-flex-grow v-flex-shrink v-flex-wrap v-gap-2"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="disabled-multiselect-menu"
            aria-expanded="false"
            aria-labelledby="disabled-multiselect-label"
            autocomplete="off"
            class="v-input v-flex-shrink"
            disabled=""
            id="disabled-multiselect-input"
            name="disabled-multiselect"
            role="combobox"
            style="flex-basis: 50px;"
            value=""
          />
        </div>
        <button
          aria-controls="disabled-multiselect-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="disabled-multiselect-toggle-button"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          disabled=""
          id="disabled-multiselect-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="disabled-multiselect-label"
        class="v-listbox v-flex"
        id="disabled-multiselect-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="disabled-multiselect-item-0"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="disabled-multiselect-item-1"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="disabled-multiselect-item-2"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="disabled-multiselect-item-3"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="disabled-multiselect-item-4"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
  <div
    class="v-mt-10 v-input-container"
  >
    <input
      checked=""
      class="v-checkbox"
      id="disabled-multiselect-checkbox-mark-as-disabled"
      type="checkbox"
    />
    <label
      class="v-label"
      for="disabled-multiselect-checkbox-mark-as-disabled"
    >
      Mark input as disabled
    </label>
  </div>
</div>
`;

exports[`Multiselect examples > Multiselect with disabled option should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="multiselect-with-disabled-option-input"
        id="multiselect-with-disabled-option-label"
      >
        Label (required)
      </label>
      <div
        class="v-surface v-input-container v-pl-3 v-pr-6 v-py-3"
      >
        <div
          class="v-flex v-flex-grow v-flex-shrink v-flex-wrap v-gap-2"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="multiselect-with-disabled-option-menu"
            aria-expanded="false"
            aria-labelledby="multiselect-with-disabled-option-label"
            autocomplete="off"
            class="v-input v-flex-shrink"
            id="multiselect-with-disabled-option-input"
            name="multiselect-with-disabled-option"
            role="combobox"
            style="flex-basis: 50px;"
            value=""
          />
        </div>
        <button
          aria-controls="multiselect-with-disabled-option-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="multiselect-with-disabled-option-toggle-button"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          id="multiselect-with-disabled-option-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="multiselect-with-disabled-option-label"
        class="v-listbox v-flex"
        id="multiselect-with-disabled-option-menu"
        role="listbox"
      >
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-disabled-option-item-0"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option A
        </li>
        <li
          aria-disabled="true"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-disabled-option-item-1"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option B
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-disabled-option-item-2"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option C
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-disabled-option-item-3"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option D
        </li>
        <li
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-disabled-option-item-4"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Multiselect examples > Multiselect with error should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="multiselect-with-error-input"
        id="multiselect-with-error-label"
      >
        Label (required)
      </label>
      <div
        class="v-surface v-input-container v-pl-3 v-pr-6 v-py-3"
      >
        <div
          class="v-flex v-flex-grow v-flex-shrink v-flex-wrap v-gap-2"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="multiselect-with-error-menu"
            aria-expanded="false"
            aria-invalid="false"
            aria-labelledby="multiselect-with-error-label"
            autocomplete="off"
            class="v-input v-flex-shrink"
            id="multiselect-with-error-input"
            name="multiselect-with-error"
            role="combobox"
            style="flex-basis: 50px;"
            value=""
          />
        </div>
        <button
          aria-controls="multiselect-with-error-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="multiselect-with-error-toggle-button"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          id="multiselect-with-error-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="multiselect-with-error-label"
        class="v-listbox v-flex"
        id="multiselect-with-error-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-error-item-0"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-error-item-1"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-error-item-2"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-error-item-3"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-error-item-4"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
  <div
    class="v-flex v-gap-12 v-mt-16"
  >
    <button
      class="v-button"
      id="multiselect-with-error-submit-button"
    >
      Submit
    </button>
    <button
      class="v-button v-button-secondary"
      id="multiselect-with-error-reset-button"
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`Multiselect examples > Multiselect with filterable menu and automatic selection should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="multiselect-with-filterable-menu-and-automatic-selection-input"
        id="multiselect-with-filterable-menu-and-automatic-selection-label"
      >
        Label (required)
      </label>
      <div
        class="v-surface v-input-container v-pl-3 v-pr-6 v-py-3"
      >
        <div
          class="v-flex v-flex-grow v-flex-shrink v-flex-wrap v-gap-2"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="multiselect-with-filterable-menu-and-automatic-selection-menu"
            aria-expanded="false"
            aria-labelledby="multiselect-with-filterable-menu-and-automatic-selection-label"
            autocomplete="off"
            class="v-input v-flex-shrink"
            id="multiselect-with-filterable-menu-and-automatic-selection-input"
            name="multiselect-with-filterable-menu-and-automatic-selection"
            role="combobox"
            style="flex-basis: 50px;"
            value=""
          />
        </div>
        <button
          aria-controls="multiselect-with-filterable-menu-and-automatic-selection-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="multiselect-with-filterable-menu-and-automatic-selection-toggle-button"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          id="multiselect-with-filterable-menu-and-automatic-selection-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="multiselect-with-filterable-menu-and-automatic-selection-label"
        class="v-listbox v-flex"
        id="multiselect-with-filterable-menu-and-automatic-selection-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item v-listbox-item-highlighted"
          id="multiselect-with-filterable-menu-and-automatic-selection-item-0"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-filterable-menu-and-automatic-selection-item-1"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-filterable-menu-and-automatic-selection-item-2"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-filterable-menu-and-automatic-selection-item-3"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-filterable-menu-and-automatic-selection-item-4"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Multiselect examples > Multiselect with filterable menu and manual selection should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="multiselect-with-filterable-menu-and-manual-selection-input"
        id="multiselect-with-filterable-menu-and-manual-selection-label"
      >
        Label (required)
      </label>
      <div
        class="v-surface v-input-container v-pl-3 v-pr-6 v-py-3"
      >
        <div
          class="v-flex v-flex-grow v-flex-shrink v-flex-wrap v-gap-2"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="multiselect-with-filterable-menu-and-manual-selection-menu"
            aria-expanded="false"
            aria-labelledby="multiselect-with-filterable-menu-and-manual-selection-label"
            autocomplete="off"
            class="v-input v-flex-shrink"
            id="multiselect-with-filterable-menu-and-manual-selection-input"
            name="multiselect-with-filterable-menu-and-manual-selection"
            role="combobox"
            style="flex-basis: 50px;"
            value=""
          />
        </div>
        <button
          aria-controls="multiselect-with-filterable-menu-and-manual-selection-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="multiselect-with-filterable-menu-and-manual-selection-toggle-button"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          id="multiselect-with-filterable-menu-and-manual-selection-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="multiselect-with-filterable-menu-and-manual-selection-label"
        class="v-listbox v-flex"
        id="multiselect-with-filterable-menu-and-manual-selection-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-filterable-menu-and-manual-selection-item-0"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-filterable-menu-and-manual-selection-item-1"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-filterable-menu-and-manual-selection-item-2"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-filterable-menu-and-manual-selection-item-3"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-filterable-menu-and-manual-selection-item-4"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Multiselect examples > Multiselect with inline message should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="multiselect-with-inline-message-input"
        id="multiselect-with-inline-message-label"
      >
        Label (required)
      </label>
      <div
        class="v-surface v-input-container v-pl-3 v-pr-6 v-py-3"
      >
        <div
          class="v-flex v-flex-grow v-flex-shrink v-flex-wrap v-gap-2"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="multiselect-with-inline-message-menu"
            aria-expanded="false"
            aria-labelledby="multiselect-with-inline-message-label"
            autocomplete="off"
            class="v-input v-flex-shrink"
            id="multiselect-with-inline-message-input"
            name="multiselect-with-inline-message"
            role="combobox"
            style="flex-basis: 50px;"
            value=""
          />
        </div>
        <button
          aria-controls="multiselect-with-inline-message-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="multiselect-with-inline-message-toggle-button"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          id="multiselect-with-inline-message-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
      <span
        class="v-input-message"
        id="multiselect-with-inline-message-message"
      >
        This is optional text that describes the label in more detail.
      </span>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="multiselect-with-inline-message-label"
        class="v-listbox v-flex"
        id="multiselect-with-inline-message-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-inline-message-item-0"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-inline-message-item-1"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-inline-message-item-2"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-inline-message-item-3"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-inline-message-item-4"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Multiselect examples > Multiselect with multiple selections and vertical scroll should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
    style="max-inline-size: 290px;"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="multiselect-with-multiple-selections-and-vertical-scroll-input"
        id="multiselect-with-multiple-selections-and-vertical-scroll-label"
      >
        Label (required)
      </label>
      <div
        class="v-surface v-input-container v-pl-3 v-pr-6 v-py-3"
      >
        <div
          class="v-flex v-flex-grow v-flex-shrink v-flex-wrap v-gap-2"
          style="max-block-size: 140px; overflow-y: auto;"
        >
          <div
            class="v-chip v-chip-compact v-flex v-flex-shrink-0"
          >
            <label
              class="v-label"
            >
              Option A
            </label>
            <button
              aria-label="Remove Option A"
              class="v-button v-button-tertiary v-button-icon v-button-subtle"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-clear-alt"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
                />
                <defs>
                  <clippath>
                    <rect
                      height="16"
                      transform="translate(0 0.000488281)"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
            </button>
          </div>
          <div
            class="v-chip v-chip-compact v-flex v-flex-shrink-0"
          >
            <label
              class="v-label"
            >
              Option B
            </label>
            <button
              aria-label="Remove Option B"
              class="v-button v-button-tertiary v-button-icon v-button-subtle"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-clear-alt"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
                />
                <defs>
                  <clippath>
                    <rect
                      height="16"
                      transform="translate(0 0.000488281)"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
            </button>
          </div>
          <div
            class="v-chip v-chip-compact v-flex v-flex-shrink-0"
          >
            <label
              class="v-label"
            >
              Option C
            </label>
            <button
              aria-label="Remove Option C"
              class="v-button v-button-tertiary v-button-icon v-button-subtle"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-clear-alt"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
                />
                <defs>
                  <clippath>
                    <rect
                      height="16"
                      transform="translate(0 0.000488281)"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
            </button>
          </div>
          <div
            class="v-chip v-chip-compact v-flex v-flex-shrink-0"
          >
            <label
              class="v-label"
            >
              Option D
            </label>
            <button
              aria-label="Remove Option D"
              class="v-button v-button-tertiary v-button-icon v-button-subtle"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-clear-alt"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
                />
                <defs>
                  <clippath>
                    <rect
                      height="16"
                      transform="translate(0 0.000488281)"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
            </button>
          </div>
          <div
            class="v-chip v-chip-compact v-flex v-flex-shrink-0"
          >
            <label
              class="v-label"
            >
              Option E
            </label>
            <button
              aria-label="Remove Option E"
              class="v-button v-button-tertiary v-button-icon v-button-subtle"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-clear-alt"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
                />
                <defs>
                  <clippath>
                    <rect
                      height="16"
                      transform="translate(0 0.000488281)"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
            </button>
          </div>
          <div
            class="v-chip v-chip-compact v-flex v-flex-shrink-0"
          >
            <label
              class="v-label"
            >
              Option F
            </label>
            <button
              aria-label="Remove Option F"
              class="v-button v-button-tertiary v-button-icon v-button-subtle"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-clear-alt"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
                />
                <defs>
                  <clippath>
                    <rect
                      height="16"
                      transform="translate(0 0.000488281)"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
            </button>
          </div>
          <div
            class="v-chip v-chip-compact v-flex v-flex-shrink-0"
          >
            <label
              class="v-label"
            >
              Option G
            </label>
            <button
              aria-label="Remove Option G"
              class="v-button v-button-tertiary v-button-icon v-button-subtle"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-clear-alt"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
                />
                <defs>
                  <clippath>
                    <rect
                      height="16"
                      transform="translate(0 0.000488281)"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
            </button>
          </div>
          <div
            class="v-chip v-chip-compact v-flex v-flex-shrink-0"
          >
            <label
              class="v-label"
            >
              Option H
            </label>
            <button
              aria-label="Remove Option H"
              class="v-button v-button-tertiary v-button-icon v-button-subtle"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-clear-alt"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
                />
                <defs>
                  <clippath>
                    <rect
                      height="16"
                      transform="translate(0 0.000488281)"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
            </button>
          </div>
          <div
            class="v-chip v-chip-compact v-flex v-flex-shrink-0"
          >
            <label
              class="v-label"
            >
              Option I
            </label>
            <button
              aria-label="Remove Option I"
              class="v-button v-button-tertiary v-button-icon v-button-subtle"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-clear-alt"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
                />
                <defs>
                  <clippath>
                    <rect
                      height="16"
                      transform="translate(0 0.000488281)"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
            </button>
          </div>
          <div
            class="v-chip v-chip-compact v-flex v-flex-shrink-0"
          >
            <label
              class="v-label"
            >
              Option J
            </label>
            <button
              aria-label="Remove Option J"
              class="v-button v-button-tertiary v-button-icon v-button-subtle"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-clear-alt"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
                />
                <defs>
                  <clippath>
                    <rect
                      height="16"
                      transform="translate(0 0.000488281)"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
            </button>
          </div>
          <div
            class="v-chip v-chip-compact v-flex v-flex-shrink-0"
          >
            <label
              class="v-label"
            >
              Option K
            </label>
            <button
              aria-label="Remove Option K"
              class="v-button v-button-tertiary v-button-icon v-button-subtle"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-clear-alt"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
                />
                <defs>
                  <clippath>
                    <rect
                      height="16"
                      transform="translate(0 0.000488281)"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
            </button>
          </div>
          <div
            class="v-chip v-chip-compact v-flex v-flex-shrink-0"
          >
            <label
              class="v-label"
            >
              Option L
            </label>
            <button
              aria-label="Remove Option L"
              class="v-button v-button-tertiary v-button-icon v-button-subtle"
            >
              <svg
                aria-hidden="true"
                class="v-icon v-icon-visa v-icon-tiny v-icon-clear-alt"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="v-icon-primary"
                  d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
                />
                <defs>
                  <clippath>
                    <rect
                      height="16"
                      transform="translate(0 0.000488281)"
                      width="16"
                    />
                  </clippath>
                </defs>
              </svg>
            </button>
          </div>
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="multiselect-with-multiple-selections-and-vertical-scroll-menu"
            aria-expanded="false"
            aria-labelledby="multiselect-with-multiple-selections-and-vertical-scroll-label"
            autocomplete="off"
            class="v-input v-flex-shrink"
            id="multiselect-with-multiple-selections-and-vertical-scroll-input"
            name="multiselect-with-multiple-selections-and-vertical-scroll"
            role="combobox"
            style="flex-basis: 50px;"
            value=""
          />
        </div>
        <button
          aria-controls="multiselect-with-multiple-selections-and-vertical-scroll-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="multiselect-with-multiple-selections-and-vertical-scroll-toggle-button"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          id="multiselect-with-multiple-selections-and-vertical-scroll-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="multiselect-with-multiple-selections-and-vertical-scroll-label"
        class="v-listbox v-listbox-scroll v-flex"
        id="multiselect-with-multiple-selections-and-vertical-scroll-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="true"
          class="v-listbox-item"
          id="multiselect-with-multiple-selections-and-vertical-scroll-item-0"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="true"
          class="v-listbox-item"
          id="multiselect-with-multiple-selections-and-vertical-scroll-item-1"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="true"
          class="v-listbox-item"
          id="multiselect-with-multiple-selections-and-vertical-scroll-item-2"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="true"
          class="v-listbox-item"
          id="multiselect-with-multiple-selections-and-vertical-scroll-item-3"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="true"
          class="v-listbox-item"
          id="multiselect-with-multiple-selections-and-vertical-scroll-item-4"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option E
        </li>
        <li
          aria-disabled="false"
          aria-selected="true"
          class="v-listbox-item"
          id="multiselect-with-multiple-selections-and-vertical-scroll-item-5"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option F
        </li>
        <li
          aria-disabled="false"
          aria-selected="true"
          class="v-listbox-item"
          id="multiselect-with-multiple-selections-and-vertical-scroll-item-6"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option G
        </li>
        <li
          aria-disabled="false"
          aria-selected="true"
          class="v-listbox-item"
          id="multiselect-with-multiple-selections-and-vertical-scroll-item-7"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option H
        </li>
        <li
          aria-disabled="false"
          aria-selected="true"
          class="v-listbox-item"
          id="multiselect-with-multiple-selections-and-vertical-scroll-item-8"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option I
        </li>
        <li
          aria-disabled="false"
          aria-selected="true"
          class="v-listbox-item"
          id="multiselect-with-multiple-selections-and-vertical-scroll-item-9"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option J
        </li>
        <li
          aria-disabled="false"
          aria-selected="true"
          class="v-listbox-item"
          id="multiselect-with-multiple-selections-and-vertical-scroll-item-10"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option K
        </li>
        <li
          aria-disabled="false"
          aria-selected="true"
          class="v-listbox-item"
          id="multiselect-with-multiple-selections-and-vertical-scroll-item-11"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option L
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-multiple-selections-and-vertical-scroll-item-12"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option M
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Multiselect examples > Multiselect with scrollbar should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="multiselect-with-scrollbar-input"
        id="multiselect-with-scrollbar-label"
      >
        Label (required)
      </label>
      <div
        class="v-surface v-input-container v-pl-3 v-pr-6 v-py-3"
      >
        <div
          class="v-flex v-flex-grow v-flex-shrink v-flex-wrap v-gap-2"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="multiselect-with-scrollbar-menu"
            aria-expanded="false"
            aria-labelledby="multiselect-with-scrollbar-label"
            autocomplete="off"
            class="v-input v-flex-shrink"
            id="multiselect-with-scrollbar-input"
            name="multiselect-with-scrollbar"
            role="combobox"
            style="flex-basis: 50px;"
            value=""
          />
        </div>
        <button
          aria-controls="multiselect-with-scrollbar-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="multiselect-with-scrollbar-toggle-button"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          id="multiselect-with-scrollbar-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="multiselect-with-scrollbar-label"
        class="v-listbox v-listbox-scroll v-flex"
        id="multiselect-with-scrollbar-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-scrollbar-item-0"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-scrollbar-item-1"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-scrollbar-item-2"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-scrollbar-item-3"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-scrollbar-item-4"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option E
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-scrollbar-item-5"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option F
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-scrollbar-item-6"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option G
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-scrollbar-item-7"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option H
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-scrollbar-item-8"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option I
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-scrollbar-item-9"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option J
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-scrollbar-item-10"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option K
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-scrollbar-item-11"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option L
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-scrollbar-item-12"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option M
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Multiselect examples > Multiselect with select and unselect all buttons should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="multiselect-with-select-and-unselect-all-buttons-input"
        id="multiselect-with-select-and-unselect-all-buttons-label"
      >
        Label (required)
      </label>
      <div
        class="v-surface v-input-container v-pl-3 v-pr-6 v-py-3"
      >
        <div
          class="v-flex v-flex-grow v-flex-shrink v-flex-wrap v-gap-2"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="multiselect-with-select-and-unselect-all-buttons-menu"
            aria-expanded="false"
            aria-labelledby="multiselect-with-select-and-unselect-all-buttons-label"
            autocomplete="off"
            class="v-input v-flex-shrink"
            id="multiselect-with-select-and-unselect-all-buttons-input"
            name="multiselect-with-select-and-unselect-all-buttons"
            role="combobox"
            style="flex-basis: 50px;"
            value=""
          />
        </div>
        <button
          aria-controls="multiselect-with-select-and-unselect-all-buttons-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="multiselect-with-select-and-unselect-all-buttons-toggle-button"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          id="multiselect-with-select-and-unselect-all-buttons-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <div
        class="v-align-items-center v-flex v-justify-content-between v-px-8"
      >
        <button
          class="v-button v-button-tertiary"
        >
          Select All
        </button>
        <button
          class="v-button v-button-tertiary v-button-destructive"
        >
          Clear All
        </button>
      </div>
      <hr
        aria-hidden="true"
        class="v-divider v-divider-decorative"
      />
      <ul
        aria-labelledby="multiselect-with-select-and-unselect-all-buttons-label"
        class="v-listbox v-flex"
        id="multiselect-with-select-and-unselect-all-buttons-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-select-and-unselect-all-buttons-item-0"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-select-and-unselect-all-buttons-item-1"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-select-and-unselect-all-buttons-item-2"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-select-and-unselect-all-buttons-item-3"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-with-select-and-unselect-all-buttons-item-4"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Multiselect examples > Multiselect without dropdown chevron should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="multiselect-without-dropdown-chevron-input"
        id="multiselect-without-dropdown-chevron-label"
      >
        Label (required)
      </label>
      <div
        class="v-surface v-input-container v-pl-3 v-pr-6 v-py-3"
      >
        <div
          class="v-flex v-flex-grow v-flex-shrink v-flex-wrap v-gap-2"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="multiselect-without-dropdown-chevron-menu"
            aria-expanded="false"
            aria-labelledby="multiselect-without-dropdown-chevron-label"
            autocomplete="off"
            class="v-input v-flex-shrink"
            id="multiselect-without-dropdown-chevron-input"
            name="multiselect-without-dropdown-chevron"
            role="combobox"
            style="flex-basis: 50px;"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="multiselect-without-dropdown-chevron-label"
        class="v-listbox v-flex"
        id="multiselect-without-dropdown-chevron-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-without-dropdown-chevron-item-0"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-without-dropdown-chevron-item-1"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-without-dropdown-chevron-item-2"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-without-dropdown-chevron-item-3"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="multiselect-without-dropdown-chevron-item-4"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Multiselect examples > Read-only multiselect should render correctly 1`] = `
<div>
  <div
    class="v-combobox"
  >
    <div
      class="v-dropdown v-flex v-flex-col v-gap-4"
    >
      <label
        class="v-label"
        for="read-only-multiselect-input"
        id="read-only-multiselect-label"
      >
        Label (required)
      </label>
      <div
        class="v-surface v-input-container v-pl-3 v-pr-6 v-py-3"
      >
        <div
          class="v-flex v-flex-grow v-flex-shrink v-flex-wrap v-gap-2"
        >
          <input
            aria-activedescendant=""
            aria-autocomplete="list"
            aria-controls="read-only-multiselect-menu"
            aria-expanded="false"
            aria-labelledby="read-only-multiselect-label"
            autocomplete="off"
            class="v-input v-flex-shrink"
            id="read-only-multiselect-input"
            name="read-only-multiselect"
            readonly=""
            role="combobox"
            style="flex-basis: 50px;"
            value=""
          />
        </div>
        <button
          aria-controls="read-only-multiselect-menu"
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="read-only-multiselect-toggle-button"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          disabled=""
          id="read-only-multiselect-toggle-button"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="v-listbox-container"
    >
      <ul
        aria-labelledby="read-only-multiselect-label"
        class="v-listbox v-flex"
        id="read-only-multiselect-menu"
        role="listbox"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="read-only-multiselect-item-0"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option A
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="read-only-multiselect-item-1"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option B
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="read-only-multiselect-item-2"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option C
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="read-only-multiselect-item-3"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option D
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="v-listbox-item"
          id="read-only-multiselect-item-4"
          role="option"
        >
          <span
            class="v-checkbox"
          />
          Option E
        </li>
      </ul>
    </div>
  </div>
  <div
    class="v-mt-10 v-input-container"
  >
    <input
      checked=""
      class="v-checkbox"
      id="read-only-multiselect-checkbox-mark-as-read-only"
      type="checkbox"
    />
    <label
      class="v-label"
      for="read-only-multiselect-checkbox-mark-as-read-only"
    >
      Mark input as read-only
    </label>
  </div>
</div>
`;

exports[`Multiselect examples > Reusable multiselect should render correctly 1`] = `
<div>
  <div>
    <div
      class="v-combobox"
    >
      <div
        class="v-dropdown v-flex v-flex-col v-gap-4"
      >
        <div
          class="v-flex v-flex-col v-gap-4"
        >
          <label
            class="v-label"
            for="test-id-0-input"
            id="test-id-0-combobox-label"
          >
            Label
          </label>
          <span
            class="v-typography-body-3"
            id="test-id-0-description"
          >
            This is optional text that describes the label in more detail.
          </span>
        </div>
        <div
          class="v-surface v-input-container v-pl-3 v-pr-6 v-py-3"
        >
          <div
            class="v-flex v-flex-grow v-flex-shrink v-flex-wrap v-gap-2"
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="test-id-0-combobox-menu"
              aria-describedby="test-id-0-description"
              aria-expanded="false"
              aria-invalid="false"
              aria-labelledby="test-id-0-combobox-label"
              autocomplete="off"
              class="v-input v-flex-shrink"
              id="test-id-0-input"
              name="test-id-0-multiselect"
              role="combobox"
              style="flex-basis: 50px;"
              value=""
            />
          </div>
          <button
            aria-controls="test-id-0-combobox-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="test-id-0-toggle-button"
            class="v-button v-button-small v-button-tertiary v-button-icon"
            id="test-id-0-combobox-toggle-button"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="v-icon-primary"
                d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
              />
            </svg>
          </button>
        </div>
      </div>
      <span
        class="v-input-message v-mt-4"
      />
      <div
        class="v-listbox-container"
      >
        <div
          class="v-align-items-center v-flex v-justify-content-between v-px-8"
        >
          <button
            class="v-button v-button-tertiary"
          >
            Select All
          </button>
          <button
            class="v-button v-button-tertiary v-button-destructive"
          >
            Clear All
          </button>
        </div>
        <hr
          aria-hidden="true"
          class="v-divider v-divider-decorative"
        />
        <ul
          aria-labelledby="test-id-0-combobox-label"
          class="v-listbox v-flex"
          id="test-id-0-combobox-menu"
          role="listbox"
        >
          <li
            aria-selected="false"
            class="v-listbox-item v-listbox-item-highlighted"
            id="test-id-0-combobox-item-0"
            role="option"
          >
            <span
              class="v-checkbox"
            />
            Option A
          </li>
          <li
            aria-selected="false"
            class="v-listbox-item"
            id="test-id-0-combobox-item-1"
            role="option"
          >
            <span
              class="v-checkbox"
            />
            Option B
          </li>
          <li
            aria-disabled="true"
            aria-selected="false"
            class="v-listbox-item"
            id="test-id-0-combobox-item-2"
            role="option"
          >
            <span
              class="v-checkbox"
              disabled=""
            />
            Option C
          </li>
          <li
            aria-selected="false"
            class="v-listbox-item"
            id="test-id-0-combobox-item-3"
            role="option"
          >
            <span
              class="v-checkbox"
            />
            Option D
          </li>
          <li
            aria-selected="false"
            class="v-listbox-item"
            id="test-id-0-combobox-item-4"
            role="option"
          >
            <span
              class="v-checkbox"
            />
            Option E
          </li>
        </ul>
      </div>
    </div>
    <div
      style="margin-top: 24px;"
    >
      <p
        class="v-typography-body-2"
      >
        Selected values: 
        None
      </p>
    </div>
    <div
      style="margin-top: 24px;"
    >
      <details
        class="v-accordion"
        id="test-id-1"
      >
        <summary
          class="v-button v-button-large v-button-secondary v-accordion-heading v-gap-2 v-typography-body-2-medium"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          <div
            class="v-align-items-center v-flex v-gap-6"
          >
            Customize demo
          </div>
        </summary>
        <div
          class="v-accordion-panel v-px-32"
        >
          <form>
            <div
              class="v-flex v-flex-col v-gap-16"
              style="margin-bottom: 32px;"
            >
              <div
                class="v-flex v-flex-col v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-2-input"
                >
                  Label
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <input
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-2-input"
                      type="text"
                      value="Label"
                    />
                  </div>
                </div>
              </div>
              <div
                class="v-flex v-flex-col v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-3-input"
                >
                  Description
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <input
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-3-input"
                      type="text"
                      value="This is optional text that describes the label in more detail."
                    />
                  </div>
                </div>
              </div>
              <div
                class="v-flex v-flex-col v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-4-input"
                >
                  Error message
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <input
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-4-input"
                      type="text"
                      value="This is required text that describes the error in more detail."
                    />
                  </div>
                </div>
              </div>
              <div
                class="v-flex v-flex-col v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-5-input"
                >
                  Options (JSON)
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <textarea
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-5-input"
                      style="block-size: 150px;"
                    >
                      [
  {
    "label": "Option A",
    "value": "a"
  },
  {
    "label": "Option B",
    "value": "b"
  },
  {
    "label": "Option C",
    "value": "c",
    "disabled": true
  },
  {
    "label": "Option D",
    "value": "d"
  },
  {
    "label": "Option E",
    "value": "e"
  }
]
                    </textarea>
                  </div>
                </div>
              </div>
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="v-checkbox"
                  id="test-id-6-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-6-input"
                  >
                    Auto filter
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-6-message"
              />
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  class="v-checkbox"
                  id="test-id-7-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-7-input"
                  >
                    Auto select
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-7-message"
              />
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  class="v-checkbox"
                  id="test-id-8-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-8-input"
                  >
                    Disabled
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-8-message"
              />
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  class="v-checkbox"
                  id="test-id-9-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-9-input"
                  >
                    Hide dropdown button
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-9-message"
              />
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  class="v-checkbox"
                  id="test-id-10-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-10-input"
                  >
                    Hide selection buttons
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-10-message"
              />
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  class="v-checkbox"
                  id="test-id-11-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-11-input"
                  >
                    Inline
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-11-message"
              />
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  class="v-checkbox"
                  id="test-id-12-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-12-input"
                  >
                    Invalid
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-12-message"
              />
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  class="v-checkbox"
                  id="test-id-13-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-13-input"
                  >
                    Readonly
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-13-message"
              />
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  class="v-checkbox"
                  id="test-id-14-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-14-input"
                  >
                    Required
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-14-message"
              />
            </div>
            <div
              class="v-flex v-gap-16"
              style="margin-bottom: 16px;"
            >
              <button
                class="v-button"
                type="submit"
              >
                Apply
              </button>
              <button
                class="v-button v-button-secondary"
                type="button"
              >
                Reset
              </button>
            </div>
          </form>
        </div>
      </details>
    </div>
  </div>
</div>
`;
